// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge Badge base demo works fine 1`] = `
<base>
  <t-badge
    class="badge-item"
    content="消息"
    dot="{{true}}"
  />
  <t-badge
    class="badge-item"
    content="消息"
    count="{{16}}"
  />
  <t-badge
    class="badge-item"
    count="New"
  >
    <wx-text
      style="padding: 0 10px"
    >
      消息
    </wx-text>
  </t-badge>
  <t-badge
    class="badge-item"
    count="···"
  >
    <wx-text
      style="padding: 0 10px"
    >
      消息
    </wx-text>
  </t-badge>
</base>
`;

exports[`Badge Badge button demo works fine 1`] = `
<wx-button>
  <t-badge
    class="badge-item"
    dot="{{true}}"
  >
    <t-button
      size="small"
      tClass="size-mini"
    >
      小按钮
    </t-button>
  </t-badge>
  <t-badge
    class="badge-item"
    count="{{16}}"
  >
    <t-button
      size="small"
      tClass="size-mini"
    >
      小按钮
    </t-button>
  </t-badge>
  <t-badge
    class="badge-item"
    count="New"
  >
    <t-button
      size="small"
      tClass="size-mini"
    >
      小按钮
    </t-button>
  </t-badge>
  <t-badge
    class="badge-item"
    count="···"
  >
    <t-button
      size="small"
      tClass="size-mini"
    >
      小按钮
    </t-button>
  </t-badge>
</wx-button>
`;

exports[`Badge Badge cell demo works fine 1`] = `
<cell>
  <t-cell-group
    style="overflow: hidden"
  >
    <t-cell
      arrow="{{true}}"
      hover="{{true}}"
      title="单行标题"
    >
      <wx-view
        class="cell-badge-wrap"
        slot="note"
      >
        <t-badge
          dot="{{true}}"
        />
      </wx-view>
    </t-cell>
    <t-cell
      arrow="{{true}}"
      hover="{{true}}"
      title="单行标题"
    >
      <wx-view
        class="cell-badge-wrap"
        slot="note"
      >
        <t-badge
          count="{{16}}"
        />
      </wx-view>
    </t-cell>
    <t-cell
      arrow="{{true}}"
      hover="{{true}}"
      title="单行标题"
    >
      <wx-view
        class="cell-badge-wrap"
        slot="note"
      >
        <t-badge
          class="cell-badge"
          count="New"
          shape="square"
        />
        <t-badge
          class="cell-badge"
          count="New"
        />
      </wx-view>
    </t-cell>
    <t-cell
      title="单行标题"
    >
      <t-badge
        count="New"
        offset="{{
          Array [
            0,
            0,
          ]
        }}"
        shape="ribbon"
        slot="note"
      />
    </t-cell>
  </t-cell-group>
</cell>
`;

exports[`Badge Badge size demo works fine 1`] = `
<size>
  <wx-view
    class="demo-desc"
  >
    Large
  </wx-view>
  <wx-view
    class="block"
  >
    <t-badge
      count="12"
      offset="{{
        Array [
          10,
          7,
        ]
      }}"
      size="large"
    >
      <t-avatar
        icon="user"
        size="large"
      />
    </t-badge>
  </wx-view>
  <wx-view
    class="demo-desc"
  >
    Middle
  </wx-view>
  <wx-view
    class="block"
  >
    <t-badge
      count="12"
      offset="{{
        Array [
          6,
          5,
        ]
      }}"
    >
      <t-avatar
        icon="user"
      />
    </t-badge>
  </wx-view>
</size>
`;

exports[`Badge Badge tab-item demo works fine 1`] = `
<tab-item>
  <t-tab-bar
    class="mb-12"
    tClass="tab-bar-wrapper"
    value="label1"
    bind:change="onChange"
  >
    <t-tab-bar-item
      badgeProps="{{
        Object {
          "count": 16,
        }
      }}"
      icon="app"
      value="label1"
    >
      文字
    </t-tab-bar-item>
    <t-tab-bar-item
      badgeProps="{{
        Object {
          "dot": true,
        }
      }}"
      icon="app"
      value="label2"
    >
      文字 
    </t-tab-bar-item>
    <t-tab-bar-item
      badgeProps="{{
        Object {
          "count": "New",
        }
      }}"
      icon="app"
      value="label3"
    >
      文字 
    </t-tab-bar-item>
    <t-tab-bar-item
      badgeProps="{{
        Object {
          "count": "···",
        }
      }}"
      icon="app"
      value="label4"
    >
      文字 
    </t-tab-bar-item>
  </t-tab-bar>
</tab-item>
`;

exports[`Badge Badge theme demo works fine 1`] = `
<theme>
  <wx-view
    class="demo-desc"
  >
    圆形徽标
  </wx-view>
  <wx-view
    class="demo-wrapper"
  >
    <t-badge
      count="2"
    >
      <t-icon
        name="notification"
        size="24"
      />
    </t-badge>
  </wx-view>
  <wx-view
    class="demo-desc"
  >
    方形徽标
  </wx-view>
  <wx-view
    class="demo-wrapper"
  >
    <t-badge
      count="2"
      shape="square"
    >
      <t-icon
        name="notification"
        size="24"
      />
    </t-badge>
  </wx-view>
  <wx-view
    class="demo-desc"
  >
    气泡徽标
  </wx-view>
  <wx-view
    class="demo-wrapper"
  >
    <t-badge
      count="领积分"
      shape="bubble"
    >
      <t-button
        icon="shop"
        shape="square"
        size="large"
      />
    </t-badge>
  </wx-view>
  <wx-view
    class="demo-desc"
    style="margin-bottom: 32rpx"
  >
    角标
  </wx-view>
  <t-cell
    title="单行标题"
  >
    <t-badge
      count="New"
      offset="{{
        Array [
          0,
          0,
        ]
      }}"
      shape="ribbon"
      slot="note"
    />
  </t-cell>
</theme>
`;
